Create first model, service and component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,5 +17,7 @@
     Aliquam lacinia risus in lectus congue suscipit.
   </p>
 
+  <app-book-list></app-book-list>
+
   <router-outlet></router-outlet>
 </div>
