--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -8,14 +8,18 @@
   <p class="lead">Edit selected book</p>
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
-    <input type="text" class="form-control" id="title" [value]="selectedBook.title">
+    <input #title type="text" class="form-control" id="title" [value]="selectedBook.title">
   </div>
   <div class="mb-3">
     <label for="author" class="form-label">Author</label>
-    <input type="text" class="form-control" id="author" [value]="selectedBook.author">
+    <input #author type="text" class="form-control" id="author" [value]="selectedBook.author">
   </div>
   <div class="mb-3">
     <label for="description" class="form-label">Description</label>
-    <textarea name="" id="description" rows="5" class="form-control">{{ selectedBook.description }}</textarea>
+    <textarea #description name="" id="description" rows="5" class="form-control">{{ selectedBook.description }}</textarea>
+  </div>
+
+  <div class="nav justify-content-end">
+    <button class="btn btn-primary" (click)="saveBook()">Save</button>
   </div>
 </div>
