--- a/src/app/books/components/book-list/book-list.component.scss
+++ b/src/app/books/components/book-list/book-list.component.scss
@@ -1,7 +1,10 @@
 .list-group-item {
   cursor: pointer;
   &:hover {
-    background-color: aqua;
+    background-color: lightblue;
+  }
+  &.selected {
+    background-color: cornflowerblue;
   }
 }
 
