--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,17 @@
 <div class="container">
-  <h1>Hello world, this still works!</h1>
-  <h2>Application name: {{ title }}.</h2>
-
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris id tristique eros.
-    Fusce ac sem non nunc consequat consectetur et et ex.
-    Donec laoreet libero luctus nibh tincidunt, nec feugiat diam bibendum.
-    Nulla sed elit elit. Nulla tempus metus sed nibh cursus venenatis.
-    Suspendisse potenti. Cras magna leo, congue vel nunc et, vehicula porttitor turpis.
-    Pellentesque vel nisl at metus molestie convallis vel et est.
-    Aliquam a metus aliquam, cursus enim facilisis, maximus leo.
-    Duis vitae erat vulputate, elementum risus eu, congue nisl.
-    Ut pretium porta tempus. Praesent a tellus sit amet tellus blandit mattis.
-    Etiam aliquet placerat malesuada. Morbi eleifend lectus vitae mauris laoreet, eu tincidunt mauris sagittis.
-    Aliquam lacinia risus in lectus congue suscipit.
-  </p>
-
-  <app-book-list></app-book-list>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div class="container-fluid justify-content-start">
+    <a class="navbar-brand" [routerLink]="['/']">Angular Master Class</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/']">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/', 'books']">Books</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
   <router-outlet></router-outlet>
 </div>
