--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -1,26 +1,30 @@
 <ul class="list-group list-group-numbered">
-  <li (click)="selectBook(book.id)" *ngFor="let book of books;" class="list-group-item" [ngClass]="{ selected: book.id === selectedBook?.id}">
+  <li (click)="selectBook(book.id)" *ngFor="let book of books;" class="list-group-item"
+      [ngClass]="{ selected: book.id === selectedBook?.id}">
     {{ book.title }}, <em>{{ book.author}}</em>
   </li>
 </ul>
 
-<div *ngIf="selectedBook" class="editor">
-  <p class="lead">Edit selected book</p>
-  <div class="mb-3">
-    <label for="title" class="form-label">Title</label>
-    <input #title type="text" class="form-control" id="title" [value]="selectedBook.title">
-  </div>
-  <div class="mb-3">
-    <label for="author" class="form-label">Author</label>
-    <input #author type="text" class="form-control" id="author" [value]="selectedBook.author">
-  </div>
-  <div class="mb-3">
-    <label for="description" class="form-label">Description</label>
-    <textarea #description name="" id="description" rows="5" class="form-control">{{ selectedBook.description }}</textarea>
-  </div>
+<form (ngSubmit)="saveBook()">
+  <div *ngIf="selectedBook" class="editor">
+    <p class="lead">Edit selected book</p>
+    <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" class="form-control" name="title" id="title" [(ngModel)]="selectedBook.title">
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Author</label>
+      <input type="text" class="form-control" name="author" id="author" [(ngModel)]="selectedBook.author">
+    </div>
+    <div class="mb-3">
+      <label for="description" class="form-label">Description</label>
+      <textarea name="description" id="description" rows="5" [(ngModel)]="selectedBook.description"
+                class="form-control"></textarea>
+    </div>
 
-  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <button class="btn btn-light" (click)="cancel()">Cancel</button>
-    <button class="btn btn-primary" (click)="saveBook()">Save</button>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <button class="btn btn-light" (click)="cancel()">Cancel</button>
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
   </div>
-</div>
+</form>
