--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -11,10 +11,16 @@
     <div class="mb-3">
       <label for="title" class="form-label">Title</label>
       <input type="text" class="form-control" name="title" id="title" formControlName="title">
+      <div class="invalid-feedback">
+        Please provide a title.
+      </div>
     </div>
     <div class="mb-3">
       <label for="author" class="form-label">Author</label>
       <input type="text" class="form-control" name="author" id="author" formControlName="author">
+      <div class="invalid-feedback">
+        Please provide an author.
+      </div>
     </div>
     <div class="mb-3">
       <label for="description" class="form-label">Description</label>
@@ -24,7 +30,7 @@
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
       <button class="btn btn-light" (click)="cancel()">Cancel</button>
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary" [disabled]="formGroup.invalid">Save</button>
     </div>
   </div>
 </form>
