--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap";
+
+form {
+  input.ng-invalid {
+    @extend .is-invalid;
+  }
+}
