--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
     Etiam aliquet placerat malesuada. Morbi eleifend lectus vitae mauris laoreet, eu tincidunt mauris sagittis.
     Aliquam lacinia risus in lectus congue suscipit.
   </p>
-  <p>{{ title }}</p>
+  <p id="title">app {{ title }} is running!</p>
+
+  <app-book-list></app-book-list>
+  
   <router-outlet></router-outlet>
 </div>
