--- a/src/app/books/component/book-list/book-list.component.html
+++ b/src/app/books/component/book-list/book-list.component.html
@@ -1,1 +1,3 @@
-<p>book-list works!</p>
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let book of books">{{ book.title }}, <em>{{ book.author }}</em></li>
+</ul>
