--- a/src/app/books/component/book-list/book-list.component.html
+++ b/src/app/books/component/book-list/book-list.component.html
@@ -1,3 +1,25 @@
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let book of books">{{ book.title }}, <em>{{ book.author }}</em></li>
+  <li [ngClass]="{ selected: book.id === selectedBook?.id}" class="list-group-item" *ngFor="let book of books" (click)="selectBook(book)">
+    {{ book.title }}, <em>{{ book.author }}</em>
+  </li>
 </ul>
+
+<div *ngIf="selectedBook" class="editor">
+  <p class="lead">Edit selected book</p>
+  <div class="mb-3">
+    <label for="title" class="form-label">Title</label>
+    <input #title type="text" id="title" class="form-control" [value]="selectedBook.title">
+  </div>
+  <div class="mb-3">
+    <label for="author" class="form-label">Author</label>
+    <input #author type="text" id="author" class="form-control" [value]="selectedBook.author">
+  </div>
+  <div class="mb-3">
+    <label for="description" class="form-label">Description</label>
+    <textarea #description name="description" id="description" rows="6" class="form-control">{{ selectedBook.description }}</textarea>
+  </div>
+
+  <div class="nav justify-content-end">
+    <button class="btn btn-primary" (click)="saveBook()">Save</button>
+  </div>
+</div>
