--- a/src/app/books/component/book-list/book-list.component.html
+++ b/src/app/books/component/book-list/book-list.component.html
@@ -19,7 +19,8 @@
     <textarea #description name="description" id="description" rows="6" class="form-control">{{ selectedBook.description }}</textarea>
   </div>
 
-  <div class="nav justify-content-end">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="btn btn-light" (click)="cancelEditing()">Cancel</button>
     <button class="btn btn-primary" (click)="saveBook()">Save</button>
   </div>
 </div>
