06-dom-unit-tests

--- a/src/app/books/component/book-list/book-list.component.html
+++ b/src/app/books/component/book-list/book-list.component.html
@@ -4,7 +4,7 @@
   </li>
 </ul>
 
-<div *ngIf="selectedBook" class="editor">
+<div *ngIf="selectedBook" id="editor">
   <p class="lead">Edit selected book</p>
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
