--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 form {
-  input,textarea {
+  input,textarea,app-input {
     &.ng-invalid.ng-touched {
       @extend .is-invalid;
     }
