--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -10,16 +10,9 @@
     <p class="lead">Edit selected book</p>
     <div class="mb-3">
       <app-input formControlName="title" inputId="title" title="Title"></app-input>
-      <div class="invalid-feedback">
-        {{ formGroup.controls.title.errors | error }}
-      </div>
     </div>
     <div class="mb-3">
-      <label for="author" class="form-label">Author</label>
-      <input type="text" class="form-control" name="author" id="author" formControlName="author">
-      <div class="invalid-feedback">
-        {{ formGroup.controls.author.errors | error }}
-      </div>
+      <app-input formControlName="author" inputId="author" title="Author"></app-input>
     </div>
     <div class="mb-3">
       <label for="description" class="form-label">Description</label>
