--- a/src/app/shared/components/widgets/input/input.component.html
+++ b/src/app/shared/components/widgets/input/input.component.html
@@ -1,12 +1,10 @@
 <label [attr.id]="inputId" class="form-label">{{title}}</label>
-<input type="text"
+<input
+       #editor
+       type="text"
        class="form-control"
        [attr.name]="name ? name : inputId"
        [attr.id]="inputId"
-       [class.ng-valid]="control?.valid"
-       [class.ng-invalid]="control?.invalid"
-       [(ngModel)]="internalValue"
-       [disabled]="disabled"
        (input)="input()"
        (blur)="blur()">
 <div class="invalid-feedback">
