--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
 <div class="container">
-  <h1>Hello world!</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris id tristique eros.
-    Fusce ac sem non nunc consequat consectetur et et ex.
-    Donec laoreet libero luctus nibh tincidunt, nec feugiat diam bibendum.
-  </p>
-  <p id="title">app {{ title }} is running!</p>
-
-  <app-book-list></app-book-list>
-
+  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <div class="container-fluid justify-content-end">
+      <a class="navbar-brand" [routerLink]="['/']">Angular Course</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/']">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/', 'books']">Books</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <router-outlet></router-outlet>
 </div>
