--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -1,26 +1,30 @@
 <ul class="list-group">
-  <li [ngClass]="{ selected: book.id === selectedBook?.id}" class="list-group-item" *ngFor="let book of books" (click)="selectBook(book)">
+  <li [ngClass]="{ selected: book.id === selectedBook?.id}" class="list-group-item" *ngFor="let book of books"
+      (click)="selectBook(book)">
     {{ book.title }}, <em>{{ book.author }}</em>
   </li>
 </ul>
 
 <div *ngIf="selectedBook" id="editor">
-  <p class="lead">Edit selected book</p>
-  <div class="mb-3">
-    <label for="title" class="form-label">Title</label>
-    <input #title type="text" id="title" class="form-control" [value]="selectedBook.title">
-  </div>
-  <div class="mb-3">
-    <label for="author" class="form-label">Author</label>
-    <input #author type="text" id="author" class="form-control" [value]="selectedBook.author">
-  </div>
-  <div class="mb-3">
-    <label for="description" class="form-label">Description</label>
-    <textarea #description name="description" id="description" rows="6" class="form-control">{{ selectedBook.description }}</textarea>
-  </div>
+  <form (ngSubmit)="saveBook()">
+    <p class="lead">Edit selected book</p>
+    <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" id="title" name="title" class="form-control" [(ngModel)]="selectedBook.title">
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Author</label>
+      <input type="text" id="author" name="author" class="form-control" [(ngModel)]="selectedBook.author">
+    </div>
+    <div class="mb-3">
+      <label for="description" class="form-label">Description</label>
+      <textarea name="description" id="description" rows="6" class="form-control"
+                [(ngModel)]="selectedBook.description"></textarea>
+    </div>
 
-  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <button class="btn btn-light" (click)="cancelEditing()">Cancel</button>
-    <button class="btn btn-primary" (click)="saveBook()">Save</button>
-  </div>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <button class="btn btn-light" (click)="cancelEditing()">Cancel</button>
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+  </form>
 </div>
