--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -10,7 +10,7 @@
     <p class="lead">Edit selected book</p>
     <div class="mb-3">
       <label for="title" class="form-label">Title</label>
-      <input type="text" id="title" name="title" class="form-control" [(ngModel)]="selectedBook.title">
+      <input type="text" id="title" name="title" class="form-control" [ngModel]="selectedBook.title" (ngModelChange)="selectedBook.title = $event">
     </div>
     <div class="mb-3">
       <label for="author" class="form-label">Author</label>
