--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -6,20 +6,19 @@
 </ul>
 
 <div *ngIf="selectedBook" id="editor">
-  <form (ngSubmit)="saveBook()">
+  <form (ngSubmit)="saveBook()" [formGroup]="formGroup">
     <p class="lead">Edit selected book</p>
     <div class="mb-3">
       <label for="title" class="form-label">Title</label>
-      <input type="text" id="title" name="title" class="form-control" [ngModel]="selectedBook.title" (ngModelChange)="selectedBook.title = $event">
+      <input type="text" id="title" name="title" class="form-control" formControlName="title">
     </div>
     <div class="mb-3">
       <label for="author" class="form-label">Author</label>
-      <input type="text" id="author" name="author" class="form-control" [(ngModel)]="selectedBook.author">
+      <input type="text" id="author" name="author" class="form-control" formControlName="author">
     </div>
     <div class="mb-3">
       <label for="description" class="form-label">Description</label>
-      <textarea name="description" id="description" rows="6" class="form-control"
-                [(ngModel)]="selectedBook.description"></textarea>
+      <textarea name="description" id="description" rows="6" class="form-control" formControlName="description"></textarea>
     </div>
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
