--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~bootstrap/scss/bootstrap";
+
+form {
+  input,textarea {
+    &.ng-invalid.ng-touched {
+      @extend .is-invalid
+    }
+  }
+}
