--- a/src/app/books/components/book-list/book-list.component.html
+++ b/src/app/books/components/book-list/book-list.component.html
@@ -12,21 +12,21 @@
       <label for="title" class="form-label">Title *</label>
       <input type="text" id="title" name="title" class="form-control" formControlName="title">
       <div class="invalid-feedback">
-        {{ dumpErrors(formGroup.controls.title.errors) }}
+        {{ formGroup.controls.title.errors | errorMsg : 'title' }}
       </div>
     </div>
     <div class="mb-3">
       <label for="author" class="form-label">Author *</label>
       <input type="text" id="author" name="author" class="form-control" formControlName="author">
       <div class="invalid-feedback">
-        {{ dumpErrors(formGroup.controls.author.errors) }}
+        {{ formGroup.controls.author.errors | errorMsg : 'author' }}
       </div>
     </div>
     <div class="mb-3">
       <label for="description" class="form-label">Description</label>
       <textarea name="description" id="description" rows="6" class="form-control" formControlName="description"></textarea>
       <div class="invalid-feedback">
-        {{ dumpErrors(formGroup.controls.description.errors) }}
+        {{ formGroup.controls.description.errors | errorMsg : 'description' }}
       </div>
     </div>
 
