--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -9,3 +9,7 @@
   [disabled]="disabled"
   (blur)="performOnTouched()"
 >
+<div class="invalid-feedback">
+  {{ control?.errors | errorMsg : (title | lowercase) }}
+</div>
+
