--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -5,6 +5,7 @@
   [id]="inputId"
   [name]="name ? name : inputId"
   class="form-control"
+  autocomplete="off"
   (input)="performOnChanged()"
   (blur)="performOnTouched()"
 >
