form split final

--- a/src/app/books/components/book-details/book-details.component.html
+++ b/src/app/books/components/book-details/book-details.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <app-edition-details [formGroup]="editionFormGroup"></app-edition-details>
+  <app-edition-details></app-edition-details>
 
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button type="button" class="btn btn-light" (click)="disableEnable()">Disable/Enable</button>
