--- a/src/app/books/components/book-details/edition-details/edition-details.component.html
+++ b/src/app/books/components/book-details/edition-details/edition-details.component.html
@@ -1,4 +1,4 @@
-<ng-container [formGroup]="formGroup" ]>
+<ng-container [formGroup]="form.formGroup" ]>
   <div class="mb-3">
     <app-input
       inputId="publisher"
