--- a/src/app/shared/components/input/input.component.scss
+++ b/src/app/shared/components/input/input.component.scss
@@ -1,9 +1,8 @@
-@import "~bootstrap/scss/bootstrap";
 
-:host {
-  &.ng-invalid.ng-touched {
-    input {
-      @extend .is-invalid;
-    }
-  }
-}
+//:host {
+//  &.ng-invalid.ng-touched {
+//    input {
+//      @extend .is-invalid;
+//    }
+//  }
+//}
